2010-09-02  Robby Stephenson  <robby@periapsis.org>

	* Updated DTD and added unit test for validation.

2010-08-29  Robby Stephenson  <robby@periapsis.org>

	* Added GCstar import/export for comic book collections.

2010-08-28  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with adding new fields during CSV import.

2010-08-25  Robby Stephenson  <robby@periapsis.org>

	* Added GCstar export for wine collections.
	* Improved GCstar import for wine collections.

2010-08-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed filter view to apply filter when item is selected (Bug: 248657).

2010-08-16  Robby Stephenson  <robby@periapsis.org>

	* Improved exporter to add option for limiting exported fields (Bug 246390).

2010-08-13  Robby Stephenson  <robby@periapsis.org>

	* Added data source fetcher for dvdfr.com.

2010-08-07  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.

2010-07-29  Robby Stephenson  <robby@periapsis.org>

	* Fixed sorting by rating when rating has double digits (Bug: 246202).

2010-07-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed IMDb matching on partial titles (Bug: 245665).
	* Fixed IMDb fetching of alternative titles.

2010-07-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed IMDb fetching of audio track and color (Bug: 244159).

2010-07-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed metadata import for file listing.

2010-07-09  Robby Stephenson  <robby@periapsis.org>

	* Added Dewey Decimal and LoC Classification to z3950 MODS import.
	* Fix subtitle value in MODS import.

2010-06-19  Robby Stephenson  <robby@periapsis.org>

	* Added filter for data source list.

2010-05-04  Robby Stephenson  <robby@periapsis.org>

	* Updated BoardGameGeek fetcher for new API.

2010-05-02  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Freebase.

2010-04-29  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for loading images whose size exceeded the cache size.
